--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <div class = "chapters"><a href = "cell.html">Cell structure and functions</a></div>
         <div class = "chapters"><a href = "tissue.html">Tissues in plants and animals</a></div>
         <div class = "chapters"><a href = "diversity.html">Biological classification and nomenclature</a></div>
+        <br>
+          <a rel="license" href="http://creativecommons.org/licenses/by/3.0/us/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/us/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/us/">Creative Commons Attribution 3.0 United States License</a>.
+</body>
     </div>
     <br>
     <br>
